tests/should_fail/bug/603.stderr
error[E0277]: the trait bound `VecMap<K, V>: creusot_contracts::Default` is not satisfied
  --> 603.rs:11:5
   |
11 |     fn default() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^ the trait `creusot_contracts::Default` is not implemented for `VecMap<K, V>`
   |
   = help: the following other types implement trait `creusot_contracts::Default`:
             &[T]
             &mut [T]
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and 24 others

error: error above

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
